# traQ-python-bot

./: Dockerfile  compose.yaml  entrypoint.sh  env-pub  run.sh  setup.sh
.devcontainer/: devcontainer.json
app/: .env  .gitignore  Cargo.toml  README.md
app/docker/python/: Dockerfile  run.py
app/docker/tar/: python.tar
app/sandbox/python-0194ba75-6df5-7bc3-b1f0-de451e58e343/: output.txt  python-code.py
app/sandbox/python-0194babf-7bb6-7970-b8bc-7b18a0305791/: python-code.py
app/src/: bot.rs  docker_manager.rs  err.rs  lib.rs  main.rs  parse.rs  tar.rs
app/src/bot/: event.rs  event_loop.rs  traq_api.rs  traq_server_connecter.rs
app/src/bot/event/: fields.rs
