[package]
name = "traq-python-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.18.1"
dotenvy = "0.15.7"
futures = "0.3.31"
http = "1.2.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tar = "0.3.1"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
uuid = { version = "1.12.1", features = ["v7"] }
